[package]
name = "bitwa_o_tortuge"
version = "0.1.0"
authors = ["bsobocki <bartq98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ggez = "0.5"
bitflags = "1"
zip = { version = "0.5", default-features = false }
directories = "2"
gfx = "0.18"
gfx_core = "0.9"
gfx_device_gl = "0.16"
glyph_brush = "0.5"
gfx_window_glutin = "0.30"
glutin = "0.20"
winit = { version = "0.19.3" }
image = {version = "0.22", default-features = false, features = ["gif_codec", "jpeg", "ico", "png_codec", "pnm",
"tga", "tiff", "webp", "bmp", "dxt", ] }
rodio = { version = "0.9", default-features = false, features = ["flac", "vorbis", "wav"] }
serde = "1"
serde_derive = "1"
toml = "0.5"
log = "0.4"
lyon = "0.13"
smart-default = "0.5"
nalgebra = {version = "0.18", features = ["mint"] }
mint = "0.5"
gilrs = "0.7"
approx = "0.3"
chrono = "0.4"
fern = "0.5"
rand = "0.7.3"
structopt = "0.2"
cgmath = { version = "0.17", features = ["mint"]}
skeptic = "0.13"